[package]
name = "rotor"
version = "0.5.9"
authors = ["Horbin"]
edition = "2021"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.2.0"

[dependencies]
slint = { version = "1.7.2", default-features = false, features = ["compat-1-2", "std", "accessibility", "backend-winit", "renderer-skia-opengl"]}
i-slint-backend-winit = "1.7.2"
raw-window-handle = "0.5.2"
muda = "0.9.3"
tray-icon = "0.8.1" 
winreg = "0.51.0"
is-root = "0.1.3"
chrono = "0.4.26"
global-hotkey = "0.4.1"
image = "0.24.7"
arboard = "3.3.0"
wfd = "0.1.7"
serde = "1.0.194"
toml = "0.8.8"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.6"
xcap = "0.0.10"
fxhash = "0.2.1"
crossbeam = "0.8.4"

[dependencies.windows-sys]
version = "0.48"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
]

[profile.release]
codegen-units = 1