[package]
name = "rotor"
version = "1.0.2"
authors = ["Horbin"]
edition = "2021"
license = "MIT"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "2.4.3"
slint-build = "1.9.2"

[dependencies]
slint = { version = "1.9.2", default-features = false, features = ["compat-1-2", "std", "accessibility", "backend-winit", "renderer-skia"]}
i-slint-backend-winit = "1.9.2"
raw-window-handle = "0.6.2"
tray-icon = "0.17.0"
winreg = "0.52.0"
is-root = "0.1.3"
chrono = "0.4.38"
global-hotkey = "0.4.1"
image = "0.25.2"
arboard = "3.4.1"
wfd = "0.1.7"
serde = "1.0.210"
toml = "0.8.19"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
zip = "2.2.0"
xcap = "0.0.13"
fxhash = "0.2.1"
crossbeam = "0.8.4"
imageproc = "0.25.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Globalization",
    "Foundation_Collections",
    "Storage_Streams",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Globalization",
]

[profile.release]
codegen-units = 1
