[package]
name = "rotor"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rotor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.23"
chrono = "0.4.41"
image = "0.25.6"
imageproc = "0.25.0"
xcap = "0.6.2"
base64 = "0.22.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = "2"
log = "0.4.27"

[dependencies.rust-paddle-ocr]
git = "https://github.com/zibo-chen/rust-paddle-ocr.git"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"
core-graphics = "0.23"
core-foundation = "0.9"
objc = "0.2"

[target."cfg(target_os = \"windows\")".dependencies]
windows = "0.61.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
