[package]
name = "rotor"
version = "2.3.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [
  ".",
  "crates/rotor-common",
  "crates/rotor-platform",
  "crates/rotor-searcher",
  "crates/rotor-screenshot",
  "crates/rotor-runtime",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rotor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
chrono = "0.4.41"
image = "0.25.6"
xcap = "0.7.0"
serde_json = "1"
tokio = { version = "1", features = ["time"] }
log = "0.4.27"
rotor-common = { path = "crates/rotor-common" }
rotor-platform = { path = "crates/rotor-platform" }
rotor-runtime = { path = "crates/rotor-runtime" }
rotor-screenshot = { path = "crates/rotor-screenshot" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
