[package]
name = "rotor-platform"
version = "2.5.2"
edition = "2021"

[dependencies]
base64 = "0.22.1"
encoding_rs = "0.8.35"
file_icon_provider = "0.4.0"
image = "0.25.6"
log = "0.4.27"
rotor-common = { path = "../rotor-common" }
serde = { version = "1", features = ["derive"] }
xcap = "0.7.0"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = "0.23"
libc = "0.2.186"

[target."cfg(target_os = \"windows\")".dependencies]
is-root = "0.1.3"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Storage_FileSystem",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
