[package]
name = "rotor-searcher"
version = "2.3.3"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
log = "0.4.27"
notify = "8.2.0"
rotor-common = { path = "../rotor-common" }
rotor-platform = { path = "../rotor-platform" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
walkdir = "2.5.0"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Ioctl",
] }
